# linux_windows_cmake_project

./: CMakeLists.txt  README.md  arch.h  build.bat  git_version.bat  git_version.sh  main.c  run.bat  version.h
cmake/: compiler_build_cfg.cmake  defconfig.cmake  output_cfg.cmake  plum_svr.cfg.cmake
cmake/GNU/: toolchain.cmake
